# use-rabbitmq

./: .gitignore  Makefile  README.md  pyproject.toml  test_connection_leak.py  test_connection_manager_retry.py  test_decorator_multi_channel.py  test_factory.py  test_structure.py
.github/workflows/: test.yml
example/: demo.py  example_api_demo.py  example_connection_factory.py  example_consume_decorator.py  example_context_manager.py  example_decorator_multi_channel.py  example_enhanced_features.py  example_multi_channel.py  example_resilience_test.py  example_simple_resilience.py
src/use_rabbitmq/: __init__.py
src/usepy_plugin_rabbitmq/: __init__.py
tests/: test_empty.py  test_enhanced_features.py  test_rabbitmq.py
