[tool.poetry]
name = "use-rabbitmq"
version = "0.1.7"
description = ""
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'use_rabbitmq', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.8"
amqpstorm = "^2.10.6"

[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

