[tool.poetry]
name = "use-rabbitmq"
version = "0.1.9a"
description = ""
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'use_rabbitmq', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.3.2"

[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[tool.ruff]
ignore = [
    "E501", # line too long, handled by black
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

