[tool.poetry]
name = "use-rabbitmq"
version = "0.2.7"
description = ""
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'use_rabbitmq', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.8"
amqpstorm = "^2.10.8"

[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[tool.ruff]
ignore = [
    "E501", # line too long, handled by black
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

